--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 # Configuración de la base de datos
+
+#Windows personalizado
 spring.datasource.url=jdbc:mysql://localhost:3366/rest_api_db
+
+#Linux o lo normal
+#spring.datasource.url=jdbc:mysql://localhost:3306/rest_api_db
+
 spring.datasource.username=root
 spring.datasource.password=root
 
